--- a/arch/arm64/configs/seawo_defconfig
+++ b/arch/arm64/configs/seawo_defconfig
@@ -168,6 +168,11 @@ CONFIG_IP6_NF_TARGET_MASQUERADE=m
 CONFIG_BRIDGE=m
 CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_NET_DSA=m
+CONFIG_NET_DSA_TAG_GSWIP=m
+CONFIG_NET_DSA_LANTIQ_GSWIP=m
+CONFIG_NET_DSA_LANTIQ_GSW_MDIO=m
+CONFIG_NET_DSA_LANTIQ_GSW_PLATFORM=m
+CONFIG_NET_DSA_LANTIQ_GSW=m
 CONFIG_VLAN_8021Q=m
 CONFIG_VLAN_8021Q_GVRP=y
 CONFIG_VLAN_8021Q_MVRP=y
