--- a/arch/arm64/boot/dts/rockchip/rk3399-maxhub-tw07b.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-maxhub-tw07b.dts
@@ -82,11 +82,51 @@
 			240 241 242 243 244 245 246 247
 			248 249 250 251 252 253 254 255>;
 		default-brightness-level = <200>;
-		enable-gpios = <&gpio1 RK_PB5 GPIO_ACTIVE_HIGH>;
+		// enable-gpios = <&gpio1 RK_PB5 GPIO_ACTIVE_HIGH>;
 		pwms = <&pwm0 0 25000 0>;
 		status = "okay";
 	};
 
+	backlight1: backlight1 {
+		compatible = "pwm-backlight";
+		brightness-levels = <
+			  0   1   2   3   4   5   6   7
+			  8   9  10  11  12  13  14  15
+			 16  17  18  19  20  21  22  23
+			 24  25  26  27  28  29  30  31
+			 32  33  34  35  36  37  38  39
+			 40  41  42  43  44  45  46  47
+			 48  49  50  51  52  53  54  55
+			 56  57  58  59  60  61  62  63
+			 64  65  66  67  68  69  70  71
+			 72  73  74  75  76  77  78  79
+			 80  81  82  83  84  85  86  87
+			 88  89  90  91  92  93  94  95
+			 96  97  98  99 100 101 102 103
+			104 105 106 107 108 109 110 111
+			112 113 114 115 116 117 118 119
+			120 121 122 123 124 125 126 127
+			128 129 130 131 132 133 134 135
+			136 137 138 139 140 141 142 143
+			144 145 146 147 148 149 150 151
+			152 153 154 155 156 157 158 159
+			160 161 162 163 164 165 166 167
+			168 169 170 171 172 173 174 175
+			176 177 178 179 180 181 182 183
+			184 185 186 187 188 189 190 191
+			192 193 194 195 196 197 198 199
+			200 201 202 203 204 205 206 207
+			208 209 210 211 212 213 214 215
+			216 217 218 219 220 221 222 223
+			224 225 226 227 228 229 230 231
+			232 233 234 235 236 237 238 239
+			240 241 242 243 244 245 246 247
+			248 249 250 251 252 253 254 255>;
+		default-brightness-level = <200>;
+		// enable-gpios = <&gpio1 RK_PB5 GPIO_ACTIVE_HIGH>;
+		pwms = <&pwm1 0 25000 0>;
+		status = "okay";
+	};
 	// edp_panel: edp-panel {
 	// 	compatible = "lg,lp079qx1-sp0v";
 	// 	backlight = <&backlight>;
@@ -172,6 +212,19 @@
 		#sound-dai-cells = <0>;
 	};
 };
+&i2c2 {
+	status = "okay";
+
+	//mipi转RGB芯片
+	icn6211@2c {
+		compatible = "chipone,icn6211";
+		reg = <0x2c>;
+		// icn,gpio_rstn = <&gpio3 RK_PD5 GPIO_ACTIVE_HIGH>;
+		enable-gpios = <&gpio2 RK_PA4 GPIO_ACTIVE_HIGH>;
+		status = "okay";
+	};
+};
+
 
 &i2c4 {
 	i2c-scl-rising-time-ns = <600>;
@@ -201,7 +254,7 @@
 	num-lanes = <4>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pcie_clkreqn_cpm>;
-	status = "okay";
+	status = "disabled"; //no
 };
 
 &pinctrl {
@@ -271,11 +324,65 @@
 	mipi_panel: panel@0 {
 		compatible = "panel-dsi-simple";
 		reg = <0>;
-		// avdd-supply = <&vcc3v3_s0>;
 		backlight = <&backlight>;
-		dvdd-supply = <&vcc3v3_s0>;
+		power-supply = <&vcc3v3_s0>;
+		status = "okay";
+            reset-gpios = <&gpio1 RK_PA0 GPIO_ACTIVE_HIGH>; 
+            enable-gpios = <&gpio3 RK_PA0 GPIO_ACTIVE_HIGH>; 
+			
+            lcd-gpios = <&gpio1 RK_PC4 GPIO_ACTIVE_HIGH>;
+            stb-gpios = <&gpio3 RK_PD4 GPIO_ACTIVE_HIGH>;
+            vcc-gpios = <&gpio1 RK_PC2 GPIO_ACTIVE_HIGH>;
+            ldoen-gpios = <&gpio4 RK_PA5 GPIO_ACTIVE_HIGH>;
+			
+            prepare-delay-ms = <20>;
+            reset-delay-ms = <30>;
+            init-delay-ms = <60>;
+            enable-delay-ms = <220>;
+            unprepare-delay-ms = <30>;
+            disable-delay-ms = <50>;
+            width-mm = <154>;
+            height-mm = <86>;
+            // dsi,flags = <(MIPI_DSI_MODE_VIDEO |
+			// 		MIPI_DSI_MODE_VIDEO_BURST |
+			// 		MIPI_DSI_MODE_LPM |
+			// 		MIPI_DSI_MODE_NO_EOT_PACKET)>;
+            // dsi,format = <MIPI_DSI_FMT_RGB888>;
+			dsi,flags = <0xa03>;
+			dsi,format = <0>;
+            dsi,lanes = <4>;
 
-
+		    panel-init-sequence = [
+				15 00 02 80 59 
+				15 00 02 81 ff 
+				15 00 02 82 e7 
+				15 00 02 83 5d 
+				15 00 02 84 e0 
+				15 00 02 85 11 
+				15 00 02 86 e0 
+				05 d8 01 11 
+				05 25 01 29];
+            panel-exit-sequence = [
+				05 00 01 28 
+				05 78 01 10];
+            display-timings {
+                native-mode = <&timing0>;
+                timing0: timing0 {
+                    clock-frequency = <50000000>;
+                    hactive = <1024>;
+                    vactive = <600>;
+                    hback-porch = <160>;
+                    hfront-porch = <160>;
+                    vback-porch = <23>;
+                    vfront-porch = <12>;
+                    hsync-len = <10>;
+                    vsync-len = <1>;
+                    hsync-active = <0>;
+                    vsync-active = <0>;
+                    de-active = <0>;
+                    pixelclk-active = <0>;
+                };
+            };
 		ports {
 			#address-cells = <1>;
 			#size-cells = <0>;
@@ -289,4 +396,89 @@
 	};
 };
 
+
+&mipi_dsi1 {
+	status = "okay";
+
+	ports {
+		mipi_out1: port@1 {
+			reg = <1>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			mipi1_out_panel: endpoint@0 {
+				reg = <0>;
+				remote-endpoint = <&mipi1_in_panel>;
+			};
+		};
+	};
+
+	mipi_panel1: panel1 {
+		compatible = "panel-dsi-simple";
+		reg = <0>;
+		backlight = <&backlight1>;
+		power-supply = <&vcc3v3_s0>;
+		status = "okay";
+            reset-gpios = <&gpio3 RK_PD5 GPIO_ACTIVE_HIGH>; //icn-rstn
+            enable-gpios = <&gpio2 RK_PA5 GPIO_ACTIVE_HIGH>; //icn-3v3  //disp-gpios
+			
+            // lcd-gpios = <&gpio2 RK_PA5 GPIO_ACTIVE_HIGH>;//disp-gpios
+            vcc-gpios = <&gpio4 RK_PA6 GPIO_ACTIVE_HIGH>;//vdd-gpios
+			
+            prepare-delay-ms = <0>;
+            reset-delay-ms = <0>;
+            init-delay-ms = <0>;
+            enable-delay-ms = <100>;
+            unprepare-delay-ms = <0>;
+            disable-delay-ms = <0>;
+
+            // dsi,flags = <(MIPI_DSI_MODE_VIDEO|MIPI_DSI_MODE_VIDEO_BURST|MIPI_DSI_MODE_LPM|MIPI_DSI_MODE_NO_EOT_PACKET|MIPI_DSI_MODE_VIDEO_NO_HBP)>;
+            // dsi,format = <MIPI_DSI_FMT_RGB888>;
+			dsi,flags = <0xa43>;
+			dsi,format = <0>;
+            dsi,lanes = <1>;
+
+		    panel-init-sequence = [
+				15 00 02 80 59 
+				15 00 02 81 ff 
+				15 00 02 82 e7 
+				15 00 02 83 5d 
+				15 00 02 84 e0 
+				15 00 02 85 11 
+				15 00 02 86 e0 
+				05 d8 01 11 
+				05 25 01 29];
+            panel-exit-sequence = [
+				05 00 01 28 
+				05 78 01 10];
+            display-timings {
+                native-mode = <&timing1>;
+                timing1: timing1 {
+                    clock-frequency = <13000000>;
+                    hactive = <480>;
+                    vactive = <272>;
+                    hback-porch = <43>;
+                    hfront-porch = <75>;
+                    vback-porch = <12>;
+                    vfront-porch = <37>;
+                    hsync-len = <75>;
+                    vsync-len = <37>;
+                    hsync-active = <0>;
+                    vsync-active = <0>;
+                    de-active = <0>;
+                    pixelclk-active = <0>;
+                };
+            };
+		ports {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			port@0 {
+				reg = <0>;
+				mipi1_in_panel: endpoint {
+					remote-endpoint = <&mipi1_out_panel>;
+				};
+			};
+		};
+	};
+};
 
