--- a/arch/arm64/boot/dts/rockchip/rk3399-maxhub-tw07b.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-maxhub-tw07b.dts
@@ -142,26 +142,39 @@
 	// 	};
 	// };
 
-	rt5651-sound {
-		compatible = "simple-audio-card";
-		simple-audio-card,name = "realtek,rt5651-codec";
-		simple-audio-card,format = "i2s";
-		simple-audio-card,mclk-fs = <256>;
-		simple-audio-card,widgets =
-			"Microphone", "Mic Jack",
-			"Headphone", "Headphone Jack";
-		simple-audio-card,routing =
-			"Mic Jack", "MICBIAS1",
-			"IN1P", "Mic Jack",
-			"Headphone Jack", "HPOL",
-			"Headphone Jack", "HPOR";
-		simple-audio-card,cpu {
-			sound-dai = <&i2s0>;
-		};
-		simple-audio-card,codec {
-			sound-dai = <&rt5651>;
-		};
-	};
+	// rt5651-sound {
+	// 	compatible = "simple-audio-card";
+	// 	simple-audio-card,name = "realtek,rt5651-codec";
+	// 	simple-audio-card,format = "i2s";
+	// 	simple-audio-card,mclk-fs = <256>;
+	// 	simple-audio-card,widgets =
+	// 		"Microphone", "Mic Jack",
+	// 		"Headphone", "Headphone Jack";
+	// 	simple-audio-card,routing =
+	// 		"Mic Jack", "MICBIAS1",
+	// 		"IN1P", "Mic Jack",
+	// 		"Headphone Jack", "HPOL",
+	// 		"Headphone Jack", "HPOR";
+	// 	simple-audio-card,cpu {
+	// 		sound-dai = <&i2s0>;
+	// 	};
+	// 	simple-audio-card,codec {
+	// 		sound-dai = <&rt5651>;
+	// 	};
+	// };
+
+    ad82010-sound {
+        compatible = "simple-audio-card";
+        simple-audio-card,format = "i2s";
+        simple-audio-card,name = "rockchip,ad82010-codec";
+        simple-audio-card,mclk-fs = <256>;
+        simple-audio-card,cpu {
+            sound-dai = <&i2s0>;
+        };
+        simple-audio-card,codec {
+            sound-dai = <&ad82010>;
+        };
+    };
 
 	sdio_pwrseq: sdio-pwrseq {
 		compatible = "mmc-pwrseq-simple";
@@ -202,16 +215,24 @@
 	i2c-scl-falling-time-ns = <15>;
 	status = "okay";
 
-	rt5651: rt5651@1a {
-		compatible = "rockchip,rt5651";
-		reg = <0x1a>;
-		clocks = <&cru SCLK_I2S_8CH_OUT>;
-		clock-names = "mclk";
-		hp-det-gpio = <&gpio4 RK_PC4 GPIO_ACTIVE_LOW>;
-		spk-con-gpio = <&gpio0 RK_PB3 GPIO_ACTIVE_HIGH>;
-		#sound-dai-cells = <0>;
+	// rt5651: rt5651@1a {
+	// 	compatible = "rockchip,rt5651";
+	// 	reg = <0x1a>;
+	// 	clocks = <&cru SCLK_I2S_8CH_OUT>;
+	// 	clock-names = "mclk";
+	// 	hp-det-gpio = <&gpio4 RK_PC4 GPIO_ACTIVE_LOW>;
+	// 	spk-con-gpio = <&gpio0 RK_PB3 GPIO_ACTIVE_HIGH>;
+	// 	#sound-dai-cells = <0>;
+	// };
+	//rtc时钟芯片
+	rs5c372@32 {
+		compatible = "rs5c372a";
+		reg = <0x32>;
+		irq_gpio = <&gpio0 RK_PB0 GPIO_ACTIVE_HIGH>;
+		status = "okay";
 	};
 };
+
 &i2c2 {
 	status = "okay";
 
@@ -225,6 +246,15 @@
 	};
 };
 
+&i2c3 {
+	status = "okay";
+	//eeprom ，加密？
+	atsha204a@64 {
+		status = "okay";
+		compatible = "atmel,atsha204a";
+		reg = <0x64>;
+	};
+};
 
 &i2c4 {
 	i2c-scl-rising-time-ns = <600>;
@@ -237,6 +267,63 @@
 		interrupt-parent = <&gpio1>;
 		interrupts = <RK_PC6 IRQ_TYPE_EDGE_RISING>;
 	};
+	bma250@18 {//没用，没有驱动添加测试。
+		compatible = "bma2xx_acc";
+		status = "okay";
+		reg = <0x18>;
+		type = <2>;
+		irq_enable = <0>;
+		poll_delay_ms = <200>;
+		layout = <6>;
+		reprobe_en = <1>;
+	};
+	fusb0: fusb30x@22 {
+		compatible = "fairchild,fusb302";
+		reg = <0x22>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&fusb0_int>;
+		int-n-gpios = <&gpio1 RK_PA2 GPIO_ACTIVE_HIGH>;
+		status = "okay";
+	};
+};
+
+&i2c6 {
+	status = "okay";
+
+	//nfc芯片 pn547  没驱动，需要开源驱动移植
+	pn547@28 {
+		status = "okay";
+		compatible = "nxp,pn547";
+		reg = <0x28>;
+		interrupt-gpios = <&gpio4 RK_PA4 0x00000004>;
+		enable-gpios = <&gpio4 RK_PA3 GPIO_ACTIVE_HIGH>;
+	};
+	//功放 codec  //完全没驱动，需要完全自己手写。
+	ad82010: ad82010@30 {
+		#sound-dai-cells = <0>;
+		compatible = "ESMT, ad82010";
+		reg = <0x30>;
+		clocks = <&cru SCLK_I2S_8CH_OUT>;
+		clock-names = "mclk";
+		pinctrl-names = "default";
+		pinctrl-0 = <&i2s_8ch_mclk>;
+		mute-gpio = <&gpio3 RK_PA1 GPIO_ACTIVE_HIGH>;
+	};
+};
+
+&i2c7 {
+	status = "okay";
+ 	goodix_ts@5d {
+            compatible = "goodix,gt911";
+            reg = <0x5d>;
+            vcc_i2c-supply = <0x00000042>;
+            goodix,rst-gpio = <&gpio1 RK_PC6 GPIO_ACTIVE_HIGH>;
+            goodix,irq-gpio = <&gpio1 RK_PC7 0x08>;
+            pinctrl-names = "default";
+            pinctrl-0 = <&tp_irq_gpio>;
+            goodix,cfg-group0 = [43 00 04 58 02 05 8d 00 01 08 28 05 50 32 03 05 00 00 00 00 00 00 00 00 00 00 00 8c 2e 0e 23 21 f1 08 00 00 00 ba 03 1c 00 00 00 00 00 03 64 32 00 00 00 0f 41 94 c5 02 07 00 00 04 eb 11 00 b2 17 00 87 1f 00 67 2a 00 50 38 00 50 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 02 04 06 08 0a 0c 0e 10 12 14 16 18 1a 1c ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff 00 02 04 06 08 0a 0c 0f 10 12 13 14 16 18 1c 1d 1e 1f 20 21 22 24 26 28 29 2a ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff 0c 01];
+            goodix,cfg-group2 = [48 d0 02 00 05 05 75 01 01 0f 24 0f 64 3c 03 05 00 00 00 02 00 00 00 16 19 1c 14 8c 0e 0e 24 00 31 0d 00 00 00 83 33 1d 00 41 00 00 3c 0a 14 08 0a 00 2b 1c 3c 94 d5 03 08 00 00 04 93 1e 00 82 23 00 74 29 00 69 2f 00 5f 37 00 5f 20 40 60 00 f0 40 30 55 50 27 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 14 19 00 00 50 50 02 04 06 08 0a 0c 0e 10 12 14 16 18 1a 1c 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 1d 1e 1f 20 21 22 24 26 28 29 2a 1c 18 16 14 13 12 10 0f 0c 0a 08 06 04 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 3c 01];
+        };
 };
 
 &i2s0 {
@@ -267,6 +354,31 @@
 	lcd-panel {
 		lcd_panel_reset: lcd-panel-reset {
 			rockchip,pins = <4 RK_PD6 RK_FUNC_GPIO &pcfg_pull_up>;
+		};
+	};
+	i2s0 {
+		i2s_8ch_mclk: i2s-8ch-mclk {
+			rockchip,pins = <4 RK_PA0 1 &pcfg_pull_none>;
+		};
+	};
+	tpsensor {
+		tp_irq_gpio: tp-irq-gpio {
+			rockchip,pins = <1 RK_PC7 0 0x000000c3>;
+		};
+	};
+	fusb30x {
+		fusb0_int: fusb0-int {
+			rockchip,pins = <1 RK_PA2 RK_FUNC_GPIO &pcfg_pull_up>;
+		};
+	};
+
+	pmic {
+		vsel1_gpio: vsel1-gpio {
+			rockchip,pins = <1 RK_PC1 RK_FUNC_GPIO &pcfg_pull_down>;
+		};
+
+		vsel2_gpio: vsel2-gpio {
+			rockchip,pins = <1 RK_PB6 RK_FUNC_GPIO &pcfg_pull_down>;
 		};
 	};
 };
@@ -439,15 +551,9 @@
             dsi,lanes = <1>;
 
 		    panel-init-sequence = [
-				15 00 02 80 59 
-				15 00 02 81 ff 
-				15 00 02 82 e7 
-				15 00 02 83 5d 
-				15 00 02 84 e0 
-				15 00 02 85 11 
-				15 00 02 86 e0 
-				05 d8 01 11 
-				05 25 01 29];
+				05 d8 01 11
+				05 25 01 29
+				];
             panel-exit-sequence = [
 				05 00 01 28 
 				05 78 01 10];
@@ -482,3 +588,21 @@
 	};
 };
 
+&vdd_cpu_b{
+	regulator-compatible = "fan53555-reg";
+	pinctrl-0 = <&vsel1_gpio>;
+	vsel-gpios = <&gpio1 RK_PC1 GPIO_ACTIVE_HIGH>;
+	regulator-initial-mode = <1>; /* 1:force PWM 2:auto */
+};
+
+&vdd_gpu {
+	regulator-compatible = "fan53555-reg";
+	pinctrl-0 = <&vsel2_gpio>;
+	vsel-gpios = <&gpio1 RK_PB6 GPIO_ACTIVE_HIGH>;
+	regulator-initial-mode = <1>; /* 1:force PWM 2:auto */
+};
+
+&tcphy0 {
+	extcon = <&fusb0>;
+	status = "okay";
+};
