--- a/arch/arm64/boot/dts/rockchip/rk3399-xiyun-p15g-m.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-xiyun-p15g-m.dts
@@ -174,6 +174,38 @@
 		};
 	};
 
+	dppanel: panel {
+		compatible = "panel-simple";
+		enable-gpios = <&gpio4 RK_PD5 GPIO_ACTIVE_HIGH>;//1d->29  24d0 25d1 26d2 27d3 28d4 29d5 gpio4
+		enable1-gpios = <&gpio4 RK_PA5 GPIO_ACTIVE_HIGH>;
+		prepare-delay-ms = <100>;
+		bpc = <8>;
+		bus-format = <0x1015>;
+		display-timings {
+			native-mode = <&timing1>;
+			timing1: timing1 {
+				clock-frequency = <96000000>;
+				hactive = <1600>;
+				vactive = <900>;
+				hfront-porch = <48>;
+				hsync-len = <32>;
+				hback-porch = <80>;
+				vfront-porch = <6>;
+				vsync-len = <10>;
+				vback-porch = <15>;
+				hsync-active = <0>;
+				vsync-active = <0>;
+				de-active = <0>;
+				pixelclk-active = <0>;
+			};
+		};
+		port {
+			panel_in_dp:endpoint {
+				remote-endpoint = <&dp_out_panel>;
+			};
+		};
+	};
+
 	rt5651-sound {
 		compatible = "simple-audio-card";
 		simple-audio-card,name = "realtek,rt5651-codec";
@@ -248,6 +280,23 @@
 			edp_out_panel: endpoint@0 {
 				reg = <0>;
 				remote-endpoint = <&panel_in_edp>;
+			};
+		};
+	};
+};
+&cdn_dp{
+	status = "okay";
+	ports {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		dp_out: port@1 {
+			reg = <1>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			dp_out_panel:endpoint@0 {
+				reg = <0>;
+				remote-endpoint = <&panel_in_dp>;
 			};
 		};
 	};
@@ -407,49 +456,6 @@
 	status = "okay";
 };
 
-&cdn_dp{
-	status = "okay";
-	
-	dp_out: port@1 {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		reg = <0x1>;
-		dp_out_panel:endpoint {
-			remote-endpoint = <&panel_in_dp>;
-		};
-	};
-};
 
-dppanel: panel {
-	compatible = "panel-simple";
-	enable-gpios = <&gpio4 RK_PD5 GPIO_ACTIVE_HIGH>;//1d->29  24d0 25d1 26d2 27d3 28d4 29d5 gpio4
-	enable1-gpios = <&gpio4 RK_PA5 GPIO_ACTIVE_HIGH>;
-	prepare-delay-ms = <100>;
-	bpc = <8>;
-	bus-format = <0x1015>;
-	display-timings {
-		native-mode = <&timing1>;
-		timing1: timing1 {
-			clock-frequency = <96000000>;
-			hactive = <1600>;
-			vactive = <900>;
-			hfront-porch = <48>;
-			hsync-len = <32>;
-			hback-porch = <80>;
-			vfront-porch = <6>;
-			vsync-len = <10>;
-			vback-porch = <15>;
-			hsync-active = <0>;
-			vsync-active = <0>;
-			de-active = <0>;
-			pixelclk-active = <0>;
-		};
-	};
-	port {
-		panel_in_dp:endpoint {
-			remote-endpoint = <&dp_out_panel>;
-		};
-	};
-};
 
 //驱动适配步骤：1,lcd 2,eth 3,touch 4,i2c 5,sound 6,wifi-bt pcie sata usb gpiokey
