--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905l3-unt402a.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905l3-unt402a.dts
@@ -54,6 +54,7 @@
 		<GIC_SPI 166 IRQ_TYPE_LEVEL_HIGH>,
 		<GIC_SPI 167 IRQ_TYPE_LEVEL_HIGH>;
 	interrupt-names = "gp", "gpmmu", "pp", "pmu","pp0", "ppmmu0", "pp1", "ppmmu1";
+	assigned-clock-rates = <500000000>;
 };
 
 &sd_emmc_c {
