--- a/arch/arm64/boot/dts/rockchip/rk3399-maxhub-tw07b.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-maxhub-tw07b.dts
@@ -139,41 +139,6 @@
 		pwms = <&pwm1 0 25000 0>;
 		status = "okay";
 	};
-	// edp_panel: edp-panel {
-	// 	compatible = "lg,lp079qx1-sp0v";
-	// 	backlight = <&backlight>;
-	// 	enable-gpios = <&gpio4 RK_PC6 GPIO_ACTIVE_HIGH>;
-	// 	pinctrl-names = "default";
-	// 	pinctrl-0 = <&lcd_panel_reset>;
-	// 	power-supply = <&vcc3v3_s0>;
-
-	// 	port {
-	// 		panel_in_edp: endpoint {
-	// 			remote-endpoint = <&edp_out_panel>;
-	// 		};
-	// 	};
-	// };
-
-	// rt5651-sound {
-	// 	compatible = "simple-audio-card";
-	// 	simple-audio-card,name = "realtek,rt5651-codec";
-	// 	simple-audio-card,format = "i2s";
-	// 	simple-audio-card,mclk-fs = <256>;
-	// 	simple-audio-card,widgets =
-	// 		"Microphone", "Mic Jack",
-	// 		"Headphone", "Headphone Jack";
-	// 	simple-audio-card,routing =
-	// 		"Mic Jack", "MICBIAS1",
-	// 		"IN1P", "Mic Jack",
-	// 		"Headphone Jack", "HPOL",
-	// 		"Headphone Jack", "HPOR";
-	// 	simple-audio-card,cpu {
-	// 		sound-dai = <&i2s0>;
-	// 	};
-	// 	simple-audio-card,codec {
-	// 		sound-dai = <&rt5651>;
-	// 	};
-	// };
 
     ad82010-sound {
         compatible = "simple-audio-card";
@@ -202,6 +167,19 @@
 		 * - PDN (power down when low)
 		 */
 		reset-gpios = <&gpio0 RK_PB2 GPIO_ACTIVE_LOW>;
+	};
+
+	//config regulator for icn6211
+	power_icn: power-icn {
+		compatible = "regulator-fixed";
+		enable-active-high;
+		// <&gpio2 RK_PA4 GPIO_ACTIVE_HIGH>; //icn-3v3 	
+		gpio = <&gpio2 RK_PA4 GPIO_ACTIVE_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&power_icn_h>;
+		regulator-name = "power_icn";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
 	};
 };
 
@@ -253,7 +231,11 @@
 		compatible = "chipone,icn6211";
 		reg = <0x2c>;
 		// icn,gpio_rstn = <&gpio3 RK_PD5 GPIO_ACTIVE_HIGH>;
-		enable-gpios = <&gpio2 RK_PA4 GPIO_ACTIVE_HIGH>;
+		vdd1-supply = <&power_icn>;
+		vdd2-supply = <&power_icn>;
+		vdd3-supply = <&power_icn>;
+		//enable-gpios = <&gpio2 RK_PA4 GPIO_ACTIVE_HIGH>;
+		enable-gpios = <&gpio3 RK_PD5 GPIO_ACTIVE_HIGH>;
 		status = "okay";
 	};
 };
@@ -295,7 +277,7 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&fusb0_int>;
 		int-n-gpios = <&gpio1 RK_PA2 GPIO_ACTIVE_HIGH>;
-		status = "okay";
+		status = "disabled";
 	};
 };
 
@@ -345,7 +327,7 @@
 };
 
 &pcie_phy {
-	status = "okay";
+	status = "disabled";
 };
 
 &pcie0 {
@@ -391,6 +373,27 @@
 
 		vsel2_gpio: vsel2-gpio {
 			rockchip,pins = <1 RK_PB6 RK_FUNC_GPIO &pcfg_pull_down>;
+		};
+	};
+
+	dsi {
+		power_dsi0_h: power-dsi0 {
+			rockchip,pins = <1 RK_PC2 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+
+		power_dsi1_h: power-dsi1 {
+			rockchip,pins = <4 RK_PA6 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+		power_icn_h: power-icn {
+			rockchip,pins = <2 RK_PA4 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+		
+	};
+	leds {
+		leds_pin: leds-pin {
+			rockchip,pins = <1 RK_PC4 RK_FUNC_GPIO &pcfg_pull_none>,
+							<3 RK_PD4 RK_FUNC_GPIO &pcfg_pull_none>,
+							<4 RK_PA5 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
 };
@@ -614,7 +617,49 @@
 	regulator-initial-mode = <1>; /* 1:force PWM 2:auto */
 };
 
-&tcphy0 {
-	extcon = <&fusb0>;
+//先搞定hdmi及mipi。后面再调试rgb接口。
+&hdmi {
+	status = "disabled";
+};
+&hdmi_in_vopb {
+	status = "disabled";
+};
+&hdmi_in_vopl {
+        status = "disabled";
+};
+&dsi_in_vopb {
 	status = "okay";
 };
+&dsi_in_vopl {
+	status = "disabled";
+};
+&dsi1_in_vopb {
+	status = "disabled";
+};
+&dsi1_in_vopl {
+	status = "okay";
+};
+
+&tcphy0 {
+	status = "disabled";
+};
+&tcphy1 {
+	status = "disabled";
+};
+&pwm1{
+	status = "okay";
+};
+
+&usbdrd3_0 {
+	status = "okay";
+	extcon = <&u2phy0>;
+};
+
+&usbdrd_dwc3_0 {
+	phys = <&u2phy0_otg>;
+	phy-names = "usb2-phy";
+	dr_mode = "otg";
+	maximum-speed = "high-speed";
+	status = "okay";
+};
+
